Fix CORS configuration and add Vite proxy for backend integration